# wizard_app

./: .gitignore  debug_db.py  pyproject.toml  sync_log.txt  wizped_data.db
docs/: technical_retrospective.md
scripts/: generate_tree.py
src/: debug_launcher.bat  debug_log.txt  sync_log.txt  wizped_data.db
src/wizped/: cli.py  dados.xlsm  dados.xlsx  db.py  main.py  mirror.py  test_conn.py  watcher.py
src/wizped/core/: db.py
src/wizped/services/: sync.py  watcher.py
src/wizped/vba/: Installer.bas
